--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <section style="margin-left: 50px;">
-    <img style="display: block; margin-left: auto; margin-right: auto; width: 250px;" src="STAR.jpg" alt="logo Makeup"/>
+    <img style="display: block; margin-left: auto; margin-right: auto; width: 250px;" src="/img/STAR.jpg" alt="logo Makeup"/>
 
 
 
